# ExtractorOCRImage

./: .env.example  .gitignore  AGENTS.md  README.md  extraccion_ocr.py  pyproject.toml  requirements.txt
agents/: core_backend.agent.md  data_db.agent.md  fullstack_integration.agent.md  ui_pyside6.agent.md
app/: __init__.py  config.py  main.py
app/core/: __init__.py  ai_client.py  auth_client.py  crop_tools.py  db_health.py  exporters.py  image_io.py  models.py  parsing.py  repository.py
app/data/: db.sqlite3
app/ui/: __init__.py  image_viewer.py  login_window.py  main_window.py  session_relogin.py  themes.py
app/ui/panels/: __init__.py  export_dialog.py  left_panel.py  right_panel.py
docs/: MYSQL_MIGRATION.md
scripts/: check_db.py  create_mysql_schema.py  migrate_sqlite_to_mysql.py
skills/: code_style_python.md  core_ocr_pipeline.md  data_access_layer.md  db_strategy_innodb.md  security_privacy.md  testing_python.md  token_efficiency.md  ui_pyside6.md
sql/: schema_mysql.sql
tests/: conftest.py
tests/unit/: test_crop_tools.py  test_export_api_compat.py  test_exporters.py  test_parsing.py  test_repository.py
