[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "extractor-ocr"
version = "1.0.0"
description = "Aplicación de escritorio para extraer texto de etiquetas de sobres con IA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pyinstaller>=6.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
